# SPDX-FileCopyrightText: 2021-2023 Birger Schacht <birger@rantanplan.org>
# SPDX-License-Identifier: MIT
[package]
name = "carl"
version = "0.3.0"
authors = ["Birger Schacht <birger@rantanplan.org>"]
edition = "2021"
license = "MIT"
description = "A colorful commandline calendar with ical support. Similar to `cal`, but with features."
repository = "https://github.com/b1rger/carl"
keywords = ["calendar", "ical", "cli", "date", "cal"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.4.13", features = ["derive", "cargo"] }
toml = "0.8.*"
serde = { version = "1.0", features = ["derive"] }
xdg = "2.5.2"
anstyle = "1.0.5"
icalendar = "0.16"
rrule = "0.11.0"
