# SPDX-FileCopyrightText: 2021-2023 Birger Schacht <birger@rantanplan.org>
# SPDX-License-Identifier: MIT
[package]
name = "carl"
version = "0.4.0"
authors = ["Birger Schacht <birger@rantanplan.org>"]
edition = "2021"
license = "MIT"
description = "A colorful commandline calendar with ical support. Similar to `cal`, but with features."
repository = "https://github.com/b1rger/carl"
keywords = ["calendar", "ical", "cli", "date", "cal"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.51", features = ["derive", "cargo"] }
toml = "0.9.*"
serde = { version = "1.0", features = ["derive"] }
xdg = "3.0.0"
anstyle = "1.0.11"
icalendar = "0.17"
rrule = { version = "0.14.0", features = ["serde"]}
minijinja = { version = "2.12.0", features = ["loader", "custom_syntax"] }
minijinja-contrib = {version="2.8.0", features = ["datetime"] }
minijinja-embed = "2.12.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[build-dependencies]
minijinja-embed = "2.12.0"
