# SPDX-FileCopyrightText: 2021-2023 Birger Schacht <birger@rantanplan.org>
# SPDX-License-Identifier: MIT
[package]
name = "carl"
version = "0.5.1"
authors = ["Birger Schacht <birger@rantanplan.org>"]
edition = "2021"
license = "MIT"
description = "A colorful commandline calendar with ical support. Similar to `cal`, but with features."
repository = "https://codeberg.org/birger/carl"
keywords = ["calendar", "ical", "cli", "date", "cal"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.49", features = ["derive", "cargo"] }
toml = "0.9.*"
serde = { version = "1.0", features = ["derive"] }
anstyle = "1.0.13"
icalendar = "0.17.6"
rrule = { version = "0.14.0", features = ["serde"]}
minijinja = { version = "2.14.0", features = ["loader", "custom_syntax"] }
minijinja-contrib = {version="2.8.0", features = ["datetime"] }
minijinja-embed = "2.12.0"
directories = "6.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[build-dependencies]
minijinja-embed = "2.12.0"
